kube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n2n-dev
  labels:
    app.kubernetes.io/part-of: n2n
    n2n.redhat.com/environment: development-only
