kube/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thought-khoral-keycloak
  namespace: thought-khoral-dev
  labels:
    app.kubernetes.io/name: thought-khoral-keycloak
    app.kubernetes.io/part-of: thought-khoral
    thought-khoral.redhat.com/environment: development-only
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thought-khoral-keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: thought-khoral-keycloak
        app.kubernetes.io/part-of: thought-khoral
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 0
      containers:
        - name: thought-khoral-keycloak
          image: localhost/thought-khoral-keycloak:dev
          imagePullPolicy: Never
          args: [start, --optimized, --import-realm]
          ports:
            - name: http
              containerPort: 8080
              hostPort: 8081
            - name: management
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /health/ready
              port: management
            periodSeconds: 5
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - name: data-tmp
              mountPath: /opt/keycloak/data/tmp
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: data-tmp
          emptyDir: {}
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: thought-khoral-keycloak
  namespace: thought-khoral-dev
  labels:
    app.kubernetes.io/name: thought-khoral-keycloak
    app.kubernetes.io/part-of: thought-khoral
spec:
  selector:
    app.kubernetes.io/name: thought-khoral-keycloak
  ports:
    - name: http
      port: 8080
      targetPort: http
